# remigroup

./: Anchor.toml  README.md  tsconfig.json
app/: package-lock.json
app/components/: AirdropForm.tsx
js/: .env.example  .env.local  .env.testnet  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json
js/src/: init.ts
js/src/util/: connection.ts  new-account-with-lamports.ts  token-swap.ts  token.ts
js/test/: token-swap-test.ts
programs/remigroup/src/: lib.rs
programs/swap/: Cargo.toml
programs/token-swap/: Cargo.toml
tests/: remigroup.ts
