[package]
name = "spl-token-swap"
version = "3.0.0"
description = "Solana Program Library Token Swap"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.7"
enum_dispatch = "0.3.11"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.14.12"
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }
spl-math = {version = "0.1.0", features = [ "no-entrypoint" ]}
spl-token = {version = "3.5.0", features = [ "no-entrypoint" ]}
spl-token-2022 = {version = "0.6.1", features = [ "no-entrypoint" ]}
getrandom = { version = "0.2.10", features = ["custom"] }

[dev-dependencies]
proptest = "1.2"
roots = "0.0.8"
solana-sdk = "1.14.12"
test-case = "3.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
